hub/study-hugo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-hugo-service
  namespace: study-hugo
spec:
  selector:
    app: study-hugo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
